; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freertos/test/extr_test_suspend_scheduler.c_timer_group0_isr.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freertos/test/extr_test_suspend_scheduler.c_timer_group0_isr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TIMER_GROUP_0 = common dso_local global i32 0, align 4
@TIMER_0 = common dso_local global i32 0, align 4
@pdFALSE = common dso_local global i64 0, align 8
@isr_count = common dso_local global i32 0, align 4
@isr_semaphore = common dso_local global i32 0, align 4
@pdTRUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @timer_group0_isr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_group0_isr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @TIMER_GROUP_0, align 4
  %5 = load i32, i32* @TIMER_0, align 4
  %6 = call i32 @timer_group_intr_clr_in_isr(i32 %4, i32 %5)
  %7 = load i32, i32* @TIMER_GROUP_0, align 4
  %8 = load i32, i32* @TIMER_0, align 4
  %9 = call i32 @timer_group_enable_alarm_in_isr(i32 %7, i32 %8)
  %10 = load i64, i64* @pdFALSE, align 8
  store i64 %10, i64* %3, align 8
  %11 = load i32, i32* @isr_count, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* @isr_count, align 4
  %13 = load i32, i32* @isr_semaphore, align 4
  %14 = call i32 @xSemaphoreGiveFromISR(i32 %13, i64* %3)
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* @pdTRUE, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %1
  %19 = call i32 (...) @portYIELD_FROM_ISR()
  br label %20

20:                                               ; preds = %18, %1
  ret void
}

declare dso_local i32 @timer_group_intr_clr_in_isr(i32, i32) #1

declare dso_local i32 @timer_group_enable_alarm_in_isr(i32, i32) #1

declare dso_local i32 @xSemaphoreGiveFromISR(i32, i64*) #1

declare dso_local i32 @portYIELD_FROM_ISR(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
